--- a/index.ipynb
+++ b/index.ipynb
@@ -189,16 +189,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'art vandelay'"
+       "'ART VANDELAY'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -222,7 +222,7 @@
    },
    "outputs": [],
    "source": [
-    "\"Ceo\" # 'CEO'"
+    "\"Ceo\". # 'CEO'"
    ]
   },
   {
